cover arrow position issue on small mobile fixed

--- a/components/cover.module.scss
+++ b/components/cover.module.scss
@@ -14,8 +14,12 @@
     // as cover will have dark image background
     color: $on-color-dark;
     text-align: center;
-    margin-top: 25vh;
+    margin-top: 14vh;
     padding: 0 2vw;
+
+    @include respond-to("sm") {
+      margin-top: 25vh;
+    }
 
     .text1 {
       font-size: $h4-font-size;
@@ -52,9 +56,13 @@
 .arrow {
   display: inline-block;
   font-size: $h3-font-size;
-  margin-top: 4em;
+  margin-top: 2.5em;
   transition: color 0.3s ease;
   animation: bounce 2s ease infinite;
+
+  @include respond-to("sm") {
+    margin-top: 4em;
+  }
 
   &:hover {
     color: $color-highlight;
